# some_ip_cplus_plus

./: CMakeLists.txt  readme.md
examples/: client_app.cpp  client_example.cpp  server_app.cpp  server_example.cpp
include/someip/: api.hpp  certificates.hpp  crypto.hpp  error_handler.hpp  message_router.hpp  serialization.hpp  service.hpp  service_discovery.hpp  someip_header.hpp  someip_message.hpp  transport.hpp  types.hpp
src/: api.cpp  message_router.cpp  service_discovery.cpp  transport.cpp
tests/: test_endtoend.cpp  test_serialization.cpp
tests/scripts/: run_some_c_test.ps1
